--- a/sass/bobcat.css
+++ b/sass/bobcat.css
@@ -1,64 +1,45 @@
-
-
-/* Facets on the left */
-prm-search > md-content.md-primoExplore-theme.main.padded-container {
-  display: -webkit-flex;
-  -webkit-flex-flow: row-reverse wrap;
-  display: flex;
-  flex-flow: row-reverse wrap;
-}
-.screen-gt-sm .sidebar{
-  webkit-flex: 0 0 15%;
-  flex: 0 0 15%;
-}
-
 /* Top nav */
 prm-topbar {
-  height: 108px;
-}
+  /*height: 108px;*/ }
 
 .prm-primary-bg.prm-hue1, prm-search-bar.prm-hue1, prm-spinner.prm-hue1.overlay-cover.light-on-dark:after, prm-topbar .top-nav-bar {
-  background-color: #57068C;
-}
+  background-color: #57068C; }
 
 prm-topbar .product-logo {
   padding: 0 1em;
-  line-height: 122px;
-}
+  line-height: 73px; }
 
 prm-logo {
-  height: 120px;
-}
+  /*height: 120px;*/ }
 
 /* Search bar */
 prm-search-bar .search-switch-buttons .md-button.switch-to-advanced {
-  color: black;
-}
+  color: black; }
+
+/* Hide language settings */
+prm-user-area .user-language {
+  display: none; }
 
 prm-change-lang {
-  display: none;
-}
+  display: none; }
 
-prm-topbar .md-button:hover {
-  background-color: #42056a;
+/*prm-topbar .md-button:hover {
+  background-color: $dark-purple;
 }
 
 md-fab-toolbar md-toolbar {
-    background-color: #42056a !important;
-}
-
+    background-color: $dark-purple !important;
+}*/
 prm-search-bar {
   background-image: url("../img/banner-bg.png");
   background-color: #f5f7fa;
   background-position: center center;
   font-size: inherit;
-  /*padding: 1em;*/
-}
+  /*padding: 1em;*/ }
 
 /* Color of the loading spinner */
-prm-spinner.half-transparent .diamond{
-    background-color: #57068C;
-}
+prm-spinner.half-transparent .diamond {
+  background-color: #57068c; }
 
 /* Search button */
 .md-button.button-confirm._md-focused:not([disabled]),
@@ -73,28 +54,35 @@ prm-spinner.half-transparent .diamond{
   padding: 0 1.2em;
   transition: background-color 0.3s ease 0s;
   color: black !important;
-  background-color: white;
-}
+  background-color: white; }
 
-/*the text coler in the search pox*/
+/* Text color in search box */
 input::-webkit-input-placeholder {
-    color: #22272d !important;
-}
+  color: #22272d !important; }
 
-input:-moz-placeholder { /* Firefox 18- */
-    color: #22272d !important;
-}
+input:-moz-placeholder {
+  /* Firefox 18- */
+  color: #22272d !important; }
 
-input::-moz-placeholder {  /* Firefox 19+ */
-    color: #22272d !important;
-}
+input::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #22272d !important; }
 
 input:-ms-input-placeholder {
-    color: #22272d !important;
-}
+  color: #22272d !important; }
 
 .md-button.button-confirm {
-	background-color: #22272d;
+  background-color: #22272d;
   color: white !important;
-  border-radius: 0 !important;
-}
+  border-radius: 0 !important; }
+
+/* Facets on the left */
+prm-search > md-content.md-primoExplore-theme.main.padded-container {
+  display: -webkit-flex;
+  -webkit-flex-flow: row-reverse wrap;
+  display: flex;
+  flex-flow: row-reverse wrap; }
+
+.screen-gt-sm .sidebar {
+  webkit-flex: 0 0 15%;
+  flex: 0 0 15%; }
