--- a/css/nyu.css
+++ b/css/nyu.css
@@ -1,7 +1,4 @@
 /* Top nav */
-prm-topbar {
-  height: 108px; }
-
 .prm-primary-bg.prm-hue1, prm-search-bar.prm-hue1, prm-spinner.prm-hue1.overlay-cover.light-on-dark:after, prm-topbar .top-nav-bar {
   background-color: #57068C; }
 
@@ -9,9 +6,7 @@ prm-topbar .product-logo {
   padding: 0 1em;
   line-height: 73px; }
 
-prm-logo {
-  height: 120px; }
-
+/* Call the clickable logo */
 /* Search bar */
 prm-search-bar .search-switch-buttons .md-button.switch-to-advanced {
   color: black; }
