Add GetIt link to details page

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -61,3 +61,8 @@ input:-ms-input-placeholder {
   color: white !important;
   border-radius: 0 !important;
 }
+
+// hide check availability button in results
+prm-search-result-list .check-avail-link {
+  display: none;
+}
