Hide OOB availability links

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -66,3 +66,8 @@ input:-ms-input-placeholder {
 prm-search-result-list .check-avail-link {
   display: none;
 }
+
+// hide OOB availability links
+prm-search-result-availability-line .layout-align-start-start.layout-row {
+  display: none;
+}
