--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,6 +1,7 @@
 $dark-purple: #57068C;
 $purple: #57068c;
 $background_light_gray: #f5f7fa;
+$getit_green: green;
 
 $text_black: #22272d;
 $text_lavender: #e0d5e8;
