Hide other OOB getit links

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -76,3 +76,9 @@ prm-search-result-list .check-avail-link {
 prm-search-result-availability-line .layout-align-start-start.layout-row {
   display: none;
 }
+#getit_link1_1 {
+  display: none;
+}
+#services-index button[aria-label="Get It"] {
+  display: none;
+}
