--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -61,3 +61,8 @@ input:-ms-input-placeholder {
   color: white !important;
   border-radius: 0 !important;
 }
+
+// Hide OOB no search result card
+prm-no-search-result > md-card.default-card {
+  display: none;
+}
