--- a/css/sass/_detail.scss
+++ b/css/sass/_detail.scss
@@ -3,10 +3,20 @@
   font-size: 18px;
 }
 
-// hide OOB availability links
+// Hide OOB availability links
 prm-search-result-list .check-avail-link, // search results
 prm-search-result-availability-line .layout-align-start-start.layout-row, // search results
-#services-index button[aria-label="Get It"], // details page: sidebar "GETIT" link
-#getit_link1_1, #getit_link1_0 { // details page: GetIt section
+[aria-label="Get It"], // details page: sidebar "GETIT" link
+&[id^='getit_link1_'] { // details page: GetIt section
+  display: none;
+}
+
+// From: https://knowledge.exlibrisgroup.com/Primo/Knowledge_Articles/How_to_disable_the_tags_in_Primo_classic_and_new_UI
+// Hide Tags in Detailed Display
+[aria-label="Tags"],
+#tags,
+// Hide Tags in Menu Tab
+a.md-button[aria-label="Tags"],
+a.md-buttom[aria-label="nui.mainmenu.label.tags"] {
   display: none;
 }
