Move the pagination widget so it doesnt overlap with the chat

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -24,6 +24,11 @@ prm-spinner.half-transparent .diamond{
     background-color: $purple;
 }
 
+// Move the pagination widget up so it doesnt overlap the chat
+prm-page-nav-menu {
+  bottom: 50px !important;
+}
+
 /* Search button */
 .md-button.button-confirm._md-focused:not([disabled]),
 .md-button.button-confirm.hovered:not([disabled]),
