Modularize the styles

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -3,4 +3,9 @@
 @import 'facets';
 @import 'general';
 @import 'chat_widget';
-@import 'detail';
+@import 'availability';
+@import 'languages';
+@import 'searchbar';
+@import 'tags';
+@import 'login';
+@import 'eshelf';
