--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -1,4 +1,7 @@
 /* Top nav */
-.prm-primary-bg.prm-hue1, prm-search-bar.prm-hue1, prm-spinner.prm-hue1.overlay-cover.light-on-dark:after, prm-topbar .top-nav-bar {
+.prm-primary-bg.prm-hue1,
+prm-search-bar.prm-hue1,
+prm-spinner.prm-hue1.overlay-cover.light-on-dark:after,
+prm-topbar .top-nav-bar {
   background-color: $dark-purple;
 }
