--- a/css/sass/_eshelf.scss
+++ b/css/sass/_eshelf.scss
@@ -6,3 +6,7 @@ prm-search-bookmark-filter a[aria-label="nui.favorites.goFavorites.tooltip"],
 prm-favorites md-tab-item:first-child {
   display: none !important;
 }
+prm-search-bookmark-filter-after button.nyu-eshelf-toolbar {
+  border-radius: 20px !important;
+  min-width: 40px !important;
+}
